syntax = "proto3";

package user;
option go_package = "./;userpb";

message CreateUserRequest {
  string name = 1;
  string password = 2;
}

message CreateUserResponse {
  int32 id = 1;
  string name = 2;
}

message LoginRequest {
  string name = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message GetUserRequest {
  int32 id = 1;
}

message GetUserResponse {
  int32 id = 1;
  string name = 2;
}
service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
}
